Added a few comments.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <!--This block contains the top header and its body-->
     <div class="container">
         <div class="wrapper">
             <div class="header">
@@ -27,6 +28,7 @@
             </div>
         </div>
     </div>
+    <!--This block contains the content section-->
     <div class="content">
         <div class="content-body">
             <p>Some random information.</p>
@@ -50,6 +52,7 @@
             </div>
         </div>
     </div>
+    <!--This block contains the quotation or people's review section-->
     <div class="quote-body">
         <div class="quote-content">
             <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
@@ -63,6 +66,7 @@
         </div>
         <button>Sign up</button>
     </div>
+    <!--This block contains the footer & its elements-->
     <div class="footer">
         <p>Copyright &copy; The Odin Project 2021</p>
     </div>
